{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 7,
  "lineage": "2e0a63fe-e5d0-35d3-ba34-e6d1f49d653f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pa-245862-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117241380568:route-table/rtb-03377e1ab0f10d8b2",
            "default_route_table_id": "rtb-03377e1ab0f10d8b2",
            "id": "rtb-03377e1ab0f10d8b2",
            "owner_id": "117241380568",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db9dd9c6e91b0d88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Salida a internet"
            },
            "tags_all": {
              "Name": "Salida a internet"
            },
            "vpc_id": "vpc-01a1a9d7d6aa9a07a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pa245862-ig",
            "aws_vpc.pa245862-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pa-245862-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:117241380568:instance/i-0a20abccc41fe84d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a20abccc41fe84d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b6681a848e277d37",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_ip": "3.236.90.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0294e724cee4a439f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa6ef6e1cd774e77",
            "tags": {
              "Name": "pa-245862-ec2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "pa-245862-ec2",
              "terraform": "True"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-094f9427ecf3cd7da"
            ]
          },
          "dependencies": [
            "aws_security_group.permitir-ssh",
            "aws_subnet.pa245862-subnet",
            "aws_vpc.pa245862-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pa245862-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117241380568:internet-gateway/igw-0db9dd9c6e91b0d88",
            "id": "igw-0db9dd9c6e91b0d88",
            "owner_id": "117241380568",
            "vpc_id": "vpc-01a1a9d7d6aa9a07a"
          },
          "dependencies": [
            "aws_vpc.pa245862-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "permitir-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117241380568:security-group/sg-094f9427ecf3cd7da",
            "description": "Permitir SSH trafico entrante",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094f9427ecf3cd7da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH desde VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Permitir_ssh",
            "name_prefix": "",
            "owner_id": "117241380568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permitir-ssh"
            },
            "tags_all": {
              "Name": "permitir-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1a9d7d6aa9a07a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pa245862-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pa245862-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117241380568:subnet/subnet-0aa6ef6e1cd774e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aa6ef6e1cd774e77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "117241380568",
            "tags": {
              "Name": "Subred US-East-1a"
            },
            "tags_all": {
              "Name": "Subred US-East-1a"
            },
            "vpc_id": "vpc-01a1a9d7d6aa9a07a"
          },
          "dependencies": [
            "aws_vpc.pa245862-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pa245862-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117241380568:vpc/vpc-01a1a9d7d6aa9a07a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0112f1397979aad23",
            "default_route_table_id": "rtb-03377e1ab0f10d8b2",
            "default_security_group_id": "sg-06372fcd3ea3da299",
            "dhcp_options_id": "dopt-cd712db7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01a1a9d7d6aa9a07a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03377e1ab0f10d8b2",
            "owner_id": "117241380568"
          }
        }
      ]
    }
  ]
}